[package]
name = "osu-bdi"
version = "0.1.1"
authors = ["'karin0' <'karin0@gmx.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
crossbeam-channel = "0.4.0"
env_logger = "0.8.3"
log = "0.4"
notify = "5.0.0-pre.8"
retain_mut = "0.1.3"
tungstenite = "0.13.0"
winreg = "0.8"
chrono = "0.4"
