[package]
name = "osu-bdi"
version = "0.2.0"
authors = ["'karin0' <'karin0@gmx.com'>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"
clap = { version = "3", features = ["derive"] }
crossbeam-channel = "0"
pretty_env_logger = "0"
lazy_static = "1"
log = "0"
notify = "5.0.0-pre.15"
tungstenite = "0"

[target.'cfg(windows)'.dependencies]
winreg = "0"

[profile.release]
strip = true
lto = true
